# fastapi_template

./: .dockerignore  .env.example  .flake8  .gitignore  .nbqa.ini  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  Dockerfile  README.md  README_PRECOMMIT.md  docker-compose.local.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
app/: router.py
app/admin/: conf.py
app/admin/api/: router.py
app/admin/crud/: crud_data_rule.py  crud_dept.py  crud_login_log.py  crud_menu.py  crud_opera_log.py  crud_role.py  crud_user.py
app/admin/model/: __init__.py  data_rule.py  dept.py  login_log.py  m2m.py  menu.py  opera_log.py  role.py  user.py  user_social.py
app/admin/schema/: data_rule.py  dept.py  login_log.py  menu.py  role.py  (+3 more)
app/task/: README.md  __init__.py  celery.py  conf.py
common/: dataclasses.py  enums.py  log.py  model.py  pagination.py  schema.py
common/exception/: errors.py  exception_handler.py
common/response/: response_code.py  response_schema.py
common/security/: jwt.py  permission.py  rbac.py
common/socketio/: actions.py  server.py
core/: conf.py  path_conf.py  registrar.py
database/: __init__.py  db.py  redis.py
middleware/: access_middleware.py  jwt_auth_middleware.py  opera_log_middleware.py  request_id_middleware.py  state_middleware.py
scripts/: base_env.sh  celery-start.sh  format.sh  init_data.py  pre_start.sh  start_dev.sh
utils/: build_tree.py  file_ops.py  import_parse.py  redis_info.py  request_id.py  serializers.py  server_info.py  string.py  timezone.py
(+28 files in other folders)
